src/tests/error/function.sibs
@i#mport(./common.sibs);
@im%port (./common.sibs);
@imp^ort (./common.sibs);
@imp@ort (./common.sibs);
@import@ (./common.sibs);
@remove? ();
@remove ();
@remove();
@"hash";
@read_as_string (./package.json) >> @find (something) > @filter (123);
@read_as_string (./package.json) > @find (something) >> @filter (123);